fixed the z-index in the navbar

--- a/scss/components/navigation-bar.scss
+++ b/scss/components/navigation-bar.scss
@@ -2,7 +2,7 @@
 header {
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 10000;
 }
 .navigation-bar {
     display: flex;
